[tool.poetry]
name = "scrape-ss-site"
version = "0.1.0"
description = "ご注文はSSですか?の スクレイピングをするツール"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
lxml = "^4.9.1"
dataclasses-json = "^0.5.7"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
